--- a/predict_euro_cup_matches.ipynb
+++ b/predict_euro_cup_matches.ipynb
@@ -142,7 +142,7 @@
     "\n",
     "# add maxmin and score differentials as columns for easy comparison later\n",
     "edf['maxmin'] = edf.index\n",
-    "edf['diff'] = edf['maxmin'].apply(lambda x: int(x[0]) - int(x[2]))"
+    "edf['diff'] = edf['maxmin'].apply(lambda x: int(x.split("-")[0]) - int(x.split("-")[1]))"
    ]
   },
   {
